# CanSat2024

./: .gitignore  README.md  helper_funcs.c  helper_funcs.h  requirements.txt
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
FlightSoftware2/drivers/: BMP388.c  GZP6859D.c  GZP6859D.h
FlightSoftwarer_3/.metadata/: .log4j2.xml  version.ini
FlightSoftwarer_3/.metadata/.plugins/org.eclipse.cdt.core/: FlightSoftware_f.language.settings.xml
FlightSoftwarer_3/.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
FlightSoftwarer_3/.metadata/.plugins/org.eclipse.core.resources/: 0.snap  3.snap  5.snap
FlightSoftwarer_3/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree  3.tree  5.tree
FlightSoftwarer_3/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
FlightSoftwarer_3/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
FlightSoftwarer_3/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
FlightSoftwarer_3/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
FlightSoftwarer_3/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
FlightSoftwarer_3/FlightSoftware_f/: .cproject  .mxproject  .project  FlightSoftware_f Debug.launch  FlightSoftware_f.ioc
FlightSoftwarer_3/FlightSoftware_f/Core/Inc/: BMP388.h  GZP6859D.h  ICM-42688.h  main.h
FlightSoftwarer_3/FlightSoftware_f/Core/Src/: BMP388.c  GZP6859D.c  ICM-42688.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c
FlightSoftwarer_3/FlightSoftware_f/Debug/: FlightSoftware_f.elf  FlightSoftware_f.list  FlightSoftware_f.map  makefile  objects.list  sources.mk
FlightSoftwarer_3/FlightSoftware_f/Debug/Core/Src/: BMP388.cyclo  BMP388.d  BMP388.su  GZP6859D.cyclo  GZP6859D.d  GZP6859D.su  ICM-42688.cyclo  ICM-42688.d  ICM-42688.su  freertos.d  main.cyclo  main.d  main.su  stm32h7xx_it.d  (+8 more)
Flight_Software/: CanSatFSW.py
Flight_Software/container_build/: CMakeLists.txt
Flight_Software/container_build/blink/: CMakeLists.txt
Flight_Software/container_build/contanier/: CMakeLists.txt  bmp280_i2c.c  bmp280_i2c.h  container_build.c
Flight_Software/container_build/contanier/c_files/: bmp280_i2c.c  bno055.c  bno055_support.c  helper_funcs.c  power_status.c
Flight_Software/container_build/contanier/h_files/: AdafruitPMTK.h  bno055.h  helper_funcs.h  power_status.h
Ground_Station/: gps_testing.py  gui.py  serial.py
Ground_Station/_sim_file/: cansat_2023_simp.txt
Ground_Station/_summary/: summary.txt
Ground_Station/common/: GroundControlStation.kv  gui.kv  gui.py  gui_serial.py  python_image_config.py  test.py
Ground_Station/source/: GroundControl.kv  groundControl.py
Ground_Station/source/_pages/: analysis_page.py  gcs_page.py  home_page.py
Ground_Station/source/tools/: custom_data_table.py  gttsx_tool.py  gui_serial.py  json_FR.py  map_overlay.py
Team_Info/: ground_station_info.json
test/: serial_testing.ino
test/arduino_mock_radio/serial_testing/: serial_testing.ino
(+45 files in other folders)
